udotool (2.2) UNRELEASED; urgency=medium

  * Now compiles with clang.
  * Option `--version` now also prints Jim Tcl version.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Sun, 09 Feb 2025 03:06:04 +0300

udotool (2.1) unstable; urgency=medium

  * CHANGE: Instead of extending command `info`, use our own command `names`.
  * NEW: If command or script returns a result, print it in a human-friendly format.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Fri, 31 Jan 2025 22:23:48 +0300

udotool (2.0) unstable; urgency=medium

  * MAJOR CHANGE: Internal script language is replaced by Jim Tcl.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Thu, 30 Jan 2025 17:56:48 +0300

udotool (1.6) unstable; urgency=medium

  * NEW: Wait for settle time after device setup.
  * NEW: Option `--settle-time` to specify device settle time.
  * NEW: Use environment variables to override some defaults.
  * NEW: Environment variables `UDOTOOL_LOOP_COUNT` and `UDOTOOL_LOOP_RTIME` are set in a loop.
  * NEW: Command `break`.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Mon, 11 Nov 2024 19:29:57 +0300

udotool (1.5) unstable; urgency=medium

  * NEW: Can now specify tweaks in addition to quirks.
  * NEW: New tweak `NOMMAN` for memory-constrained systems.
  * NEW: Command `exit`.
  * CHANGED: Command `endloop` renamed to `end`.
  * NEW: Command `if`/`else`.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Sun, 13 Oct 2024 18:28:44 +0300

udotool (1.4) unstable; urgency=medium

  * CHANGED: script lines are now subject to word expansion.
  * NEW: Argument for option `-i` is now optional.
  * NEW: Command `echo`.
  * NEW: Command `set`.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Tue, 08 Oct 2024 14:59:22 +0300

udotool (1.3) unstable; urgency=medium

  * NEW: Option for `exec` to run command detached.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Sat, 03 Aug 2024 17:22:40 +0300

udotool (1.2) unstable; urgency=medium

  * NEW: Timed loops and timed repeats.
