@@ -36,11 +36,6 @@ tablet/digitizer buttons). This prevents `udev` from setting property
 the source say that this is for "VMware USB mouse", whatever that may be).
 
 Nevertheless, I can envision a situation where a user might want to enable
-these buttons, even if this means losing `libinput` compatibility. I hid
-corresponding `udotool` code under conditional compilation, controlled
-by a preprocessor define. If you want to compile `udotool` without this
-code, use command:
-
-```sh
-make QUIRKS=
-```
+these buttons, even if this means losing `libinput` compatibility. It can
+be done by disabling quirk flag `libinput` (see option `--quirk` and
+environment variable `UDOTOOL_QUIRKS`).
